[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/SceneTransition.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 60
outline_color = Color( 0.796078, 0.858824, 0.988235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform vec3 tint;

void fragment() {
	COLOR = texture(SCREEN_TEXTURE, SCREEN_UV);
	COLOR.rgb = vec3(COLOR.r + COLOR.g + COLOR.b) / 2.6;
	COLOR.rgb = (COLOR.rgb + tint.rgb) / 4.0;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/tint = Vector3( 0, 0, 0 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.12549, 0.203922, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 25.0
margin_top = 141.0
margin_right = 975.0
margin_bottom = 214.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Space Loop"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 401.0
margin_top = 272.0
margin_right = 598.0
margin_bottom = 339.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 393.0
margin_top = 382.0
margin_right = 610.0
margin_bottom = 449.0
rect_pivot_offset = Vector2( -1369, -519 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Options"
flat = true

[node name="Button3" type="Button" parent="."]
margin_left = 391.0
margin_top = 486.0
margin_right = 608.0
margin_bottom = 553.0
rect_pivot_offset = Vector2( -1369, -519 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Credits"
flat = true

[node name="SceneTransition" parent="." instance=ExtResource( 1 )]
visible = false

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource( 4 )
margin_left = 5268.0
margin_top = -1856.0
margin_right = 5341.0
margin_bottom = -1086.0
rect_scale = Vector2( -144.698, 5.91109 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_CreditsButton_pressed"]
